compiler-core/src/type_/snapshots/rakun_core__type___tests__type_unification_removes_inferred_variant_in_nested_type.snap
---
source: compiler-core/src/type_/tests.rs
expression: "\npub record Box<a> {\n  Box(inner: a)\n}\n\npub record Either<a, b> {\n  Left(value: a)\n  Right(value: b)\n}\n\nfn a_or_b(_first: value, second: value) -> value {\n  second\n}\n\npub fn main() {\n  let Box(inner) = a_or_b(Box(Left(1)), Box(Right(\"hello\")))\n  Left(..inner, value: 10)\n}\n"
---
----- SOURCE CODE

pub record Box<a> {
  Box(inner: a)
}

pub record Either<a, b> {
  Left(value: a)
  Right(value: b)
}

fn a_or_b(_first: value, second: value) -> value {
  second
}

pub fn main() {
  let Box(inner) = a_or_b(Box(Left(1)), Box(Right("hello")))
  Left(..inner, value: 10)
}


----- ERROR
error: Unsafe record update
   ┌─ /src/one/two.rakun:17:10
   │
17 │   Left(..inner, value: 10)
   │          ^^^^^ I'm not sure this is always a `Left`


This value cannot be used to build an updated `Left` as it could be some
other variant.

Consider pattern matching on it with a case expression and then
constructing a new record with its values.
